--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 			<version>1.19</version>
 		</dependency>
 		<dependency>
+			<groupId>org.mongodb</groupId>
+			<artifactId>mongo-java-driver</artifactId>
+			<version>2.14.2</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.ws.rs</groupId>
 			<artifactId>jsr311-api</artifactId>
 			<version>1.1.1</version>
@@ -75,14 +80,14 @@
 			<version>20160212</version>
 		</dependency>
 		<dependency>
-   			<groupId>org.glassfish</groupId>
-    		<artifactId>javax.json</artifactId>
-    		<version>1.0.4</version>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.json</artifactId>
+			<version>1.0.4</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.json</groupId>
-    		<artifactId>javax.json-api</artifactId>
-   			<version>1.0</version>
+			<artifactId>javax.json-api</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 </project>
